[project]
name = "mermaid-process-builder"
version = "0.1.0"
description = "A Streamlit app that converts process descriptions into Mermaid flowcharts using OpenAI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.59.1",
    "openai>=2.0.0",
]

[tool.poetry]
package-mode = false

[tool.uv]
package = false
